<resources>
    <string name="app_name">Uruplayer</string>
    <string name="setup_title">Uruplayer Setup</string>
    <string name="cms_url_hint">CMS URL (e.g., http://urufile.online)</string>
    <string name="server_key_hint">Server Key</string>
    <string name="display_name_hint">Display Name</string>
    <string name="collection_interval_hint">Collection Interval (seconds)</string>
    <string name="save_button">Save &amp; Connect</string>
    <string name="error_fields_required">CMS URL and Server Key are required.</string>
</resources>
